--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,9 +1,7 @@
 #
 # Makefile.am -- generate a portable Makefile for the meteo interface package
 #
-# (c) 2001 Dr. Andreas Mueller, Beratung und Entwicklung
-#
-# $Id: Makefile.am,v 1.44 2008/09/07 15:18:52 afm Exp $
+# (c) 2001-2021 Prof. Dr. Andreas Mueller
 #
 
 lib_LTLIBRARIES = libmeteo.la
@@ -16,63 +14,153 @@ VERSION_FILE = ../include/meteo_vers.h
 libmeteo_la_LDFLAGS = -version-info `../shtool version -d libtool $(VERSION_FILE)`
 
 libmeteo_la_SOURCES =							\
-	MeteoException.cc Vector.cc					\
-	BasicValue.cc Value.cc VoltageValue.cc TransmitterStatus.cc	\
-	TemperatureValue.cc HumidityValue.cc PressureValue.cc		\
-	SolarValue.cc UVValue.cc MoistureValue.cc LeafwetnessValue.cc	\
-	LevelValue.cc WindSpeed.cc Wind.cc Rain.cc RainRate.cc		\
-	TimeValue.cc							\
-	BasicValueFactory.cc ValueFactory.cc				\
-	BasicRecorder.cc Recorder.cc MinmaxRecorder.cc 			\
-	TemperatureRecorder.cc HumidityRecorder.cc PressureRecorder.cc	\
-	SolarRecorder.cc UVRecorder.cc MoistureRecorder.cc 		\
-	LeafwetnessRecorder.cc LevelRecorder.cc VoltageRecorder.cc	\
-	WindRecorder.cc RainRecorder.cc RainRateRecorder.cc		\
-	RecorderFactory.cc TransmitterRecorder.cc TimeRecorder.cc	\
-	DataRecorder.cc LastRecorder.cc					\
-	Converter.cc BasicConverter.cc ConverterFactory.cc		\
-	TemperatureConverter.cc HumidityConverter.cc 			\
-	PressureConverter.cc SolarConverter.cc UVConverter.cc		\
-	RainConverter.cc RainRateConverter.cc TimeConverter.cc		\
-	MoistureConverter.cc LeafwetnessConverter.cc LevelConverter.cc	\
-	WindConverter.cc VoltageConverter.cc TransmitterConverter.cc	\
-	Configuration.cc Field_internals.cc Field.cc StationInfo.cc	\
-	FQField.cc FQField_internals.cc					\
-	Timeval.cc 							\
-	Channel.cc SerialChannel.cc TcpChannel.cc FileChannel.cc	\
-	ChannelFactory.cc						\
-	SensorStationInfo.cc SensorStation.cc				\
-	Station.cc DavisStation.cc OldDavisStation.cc WMII.cc 		\
-	GroWeather.cc Energy.cc	Health.cc VantagePro.cc			\
-	ReaderInfo.cc StationFactory.cc					\
-	Calibrator.cc							\
-	PacketReader.cc BasicPacketReader.cc				\
-	BytePacketReader.cc ShortPacketReader.cc NibblePacketReader.cc	\
-	TemperatureReader.cc OldTemperatureReader.cc			\
-	ExtraTemperatureReader.cc BarometerReader.cc UVReader.cc	\
-	WMIIWindReader.cc VantageProWindReader.cc OldWindReader.cc	\
-	RainReader.cc RainRateReader.cc TimeReader.cc VoltageReader.cc	\
-	PacketReaderFactory.cc						\
-	Level.cc Timelabel.cc 						\
-	Datasink.cc Pidfile.cc Dataset.cc				\
-	Derivedvalue.cc Dewpoint.cc Heatindex.cc Windchill.cc		\
-	Query.cc QueryResult.cc QueryProcessor.cc			\
-	Tdata.cc 							\
-	Point.cc Dimension.cc Rectangle.cc Color.cc Label.cc Frame.cc	\
-	Scale.cc Axis.cc GraphPoint.cc MapArea.cc ImageMap.cc 		\
-	SunData.cc Sun.cc GraphWindow.cc Graphics.cc			\
-	Datarecord.cc							\
 	Averager.cc							\
-	MsgCommon.cc MsgQueuer.cc MsgDequeuer.cc			\
-	Timestamp.cc Format.cc						\
-	Mapfile.cc							\
-	crc.c 								\
-	Daemon.cc							\
+	Axis.cc								\
+	BarometerReader.cc						\
+	BasicConverter.cc						\
+	BasicPacketReader.cc						\
+	BasicRecorder.cc						\
+	BasicValue.cc							\
+	BasicValueFactory.cc						\
+	BytePacketReader.cc						\
+	Calibrator.cc							\
+	Channel.cc							\
+	ChannelFactory.cc						\
 	ChunkDumper.cc							\
+	Color.cc							\
+	Configuration.cc						\
+	Converter.cc							\
+	ConverterFactory.cc						\
+	Daemon.cc							\
+	DataRecorder.cc							\
+	Datarecord.cc							\
+	Dataset.cc							\
+	Datasink.cc							\
+	DavisStation.cc							\
+	Derivedvalue.cc							\
+	Dewpoint.cc							\
+	Dimension.cc							\
+	Energy.cc							\
+	ExtraTemperatureReader.cc					\
+	FQField.cc							\
+	FQField_internals.cc						\
+	Field.cc							\
+	Field_internals.cc						\
+	FileChannel.cc							\
+	Format.cc							\
+	Frame.cc							\
+	GraphPoint.cc							\
+	GraphWindow.cc							\
+	Graphics.cc							\
+	GroWeather.cc							\
+	Health.cc							\
+	Heatindex.cc							\
+	HumidityConverter.cc						\
+	HumidityRecorder.cc						\
+	HumidityValue.cc						\
+	ImageMap.cc							\
+	Label.cc							\
+	LastRecorder.cc							\
+	LeafwetnessConverter.cc						\
+	LeafwetnessRecorder.cc						\
+	LeafwetnessValue.cc						\
+	Level.cc							\
+	LevelConverter.cc						\
+	LevelRecorder.cc						\
+	LevelValue.cc							\
 	Lock.cc								\
-	Outlet.cc QueryOutlet.cc XmlOutlet.cc XmlOutletDelegate.cc	\
+	MapArea.cc							\
+	Mapfile.cc							\
+	MeteoException.cc						\
+	MinmaxRecorder.cc						\
+	MoistureConverter.cc						\
+	MoistureRecorder.cc						\
+	MoistureValue.cc						\
+	MsgCommon.cc							\
+	MsgDequeuer.cc							\
+	MsgQueuer.cc							\
+	NibblePacketReader.cc						\
+	OldDavisStation.cc						\
+	OldTemperatureReader.cc						\
+	OldWindReader.cc						\
+	Outlet.cc							\
+	PacketReader.cc							\
+	PacketReaderFactory.cc						\
+	Pidfile.cc							\
+	Point.cc							\
+	PressureConverter.cc						\
+	PressureRecorder.cc						\
+	PressureValue.cc						\
+	Query.cc							\
+	QueryOutlet.cc							\
+	QueryProcessor.cc						\
+	QueryResult.cc							\
+	Rain.cc								\
+	RainConverter.cc						\
+	RainRate.cc							\
+	RainRateConverter.cc						\
+	RainRateReader.cc						\
+	RainRateRecorder.cc						\
+	RainReader.cc							\
+	RainRecorder.cc							\
+	ReaderInfo.cc							\
+	Recorder.cc							\
+	RecorderFactory.cc						\
+	Rectangle.cc							\
+	Scale.cc							\
+	SensorStation.cc						\
+	SensorStationInfo.cc						\
+	SerialChannel.cc						\
+	ShortPacketReader.cc						\
+	SolarConverter.cc						\
+	SolarRecorder.cc						\
+	SolarValue.cc							\
+	Station.cc							\
+	StationFactory.cc						\
+	StationInfo.cc							\
+	Sun.cc								\
+	SunData.cc							\
+	TcpChannel.cc							\
+	Tdata.cc							\
+	TemperatureConverter.cc						\
+	TemperatureReader.cc						\
+	TemperatureRecorder.cc						\
+	TemperatureValue.cc						\
+	TimeConverter.cc						\
+	TimeReader.cc							\
+	TimeRecorder.cc							\
+	TimeValue.cc							\
+	Timelabel.cc							\
+	Timestamp.cc							\
+	Timeval.cc							\
+	TransmitterConverter.cc						\
+	TransmitterRecorder.cc						\
+	TransmitterStatus.cc						\
+	UVConverter.cc							\
+	UVReader.cc							\
+	UVRecorder.cc							\
+	UVValue.cc							\
+	Value.cc							\
+	ValueFactory.cc							\
+	VantagePro.cc							\
+	VantageProWindReader.cc						\
+	Vector.cc							\
+	VoltageConverter.cc						\
+	VoltageReader.cc						\
+	VoltageRecorder.cc						\
+	VoltageValue.cc							\
+	WMII.cc								\
+	WMIIWindReader.cc						\
+	Wind.cc								\
+	WindConverter.cc						\
+	WindRecorder.cc							\
+	WindSpeed.cc							\
+	Windchill.cc							\
+	XmlOutlet.cc							\
+	XmlOutletDelegate.cc						\
 	XmlOutletFactory.cc						\
-	printver.c							\
-	mdebug.c  
+	crc.c								\
+	mdebug.c							\
+	printver.c
 
 EXTRA_DIST = README README.sunriset
