--- a/Makefile.am
+++ b/Makefile.am
@@ -1,9 +1,7 @@
 #
 # Makefile.am -- generate a portable Makefile for the meteo interface package
 #
-# (c) 2001 Dr. Andreas Mueller, Beratung und Entwicklung
-#
-# $Id: Makefile.am,v 1.43 2004/04/30 13:25:13 afm Exp $
+# (c) 2001-2021 Prof. Dr. Andreas Mueller
 #
 VERSION = @VERSION@
 
