--- a/conf/Makefile.am
+++ b/conf/Makefile.am
@@ -1,9 +1,7 @@
 #
 # Makefile.am -- generate a portable Makefile for the meteo interface package
 #
-# (c) 2001 Dr. Andreas Mueller, Beratung und Entwicklung
-#
-# $Id: Makefile.am,v 1.7 2003/10/24 16:15:17 afm Exp $
+# (c) 2001-2021 Prof. Dr. Andreas Mueller
 #
 EXTRA_DIST = meteo.xml meteo-60.xml meteo.dtd README
 
