--- a/db/Makefile.am
+++ b/db/Makefile.am
@@ -1,9 +1,7 @@
 #
 # Makefile.am -- generate a portable Makefile for the meteo interface package
 #
-# (c) 2001 Dr. Andreas Mueller, Beratung und Entwicklung
-#
-# $Id: Makefile.am,v 1.2 2003/10/25 00:52:31 afm Exp $
+# (c) 2001-2021 Prof. Dr. Andreas Mueller
 #
 
 noinst_DATA = meteo.sql
