--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 aclocal.m4
 ar-lib
+autom4te.cache
 compile
 config.*
 configure
@@ -10,6 +11,7 @@ man/meteo.1
 *~
 *.lo
 *.o
+*.mo
 .deps
 .libs
 Makefile
@@ -43,4 +45,7 @@ meteomap
 meteopoll
 meteosensors
 meteosunriset
-
+meteodbmigrate
+meteofixtimestamps
+meteopacket
+libmeteo.la
