add powermeter stuff

--- a/conf/Makefile.am
+++ b/conf/Makefile.am
@@ -3,8 +3,8 @@
 #
 # (c) 2001-2021 Prof. Dr. Andreas Mueller
 #
-EXTRA_DIST = meteo.xml meteo-60.xml meteo.dtd README
+EXTRA_DIST = meteo.xml meteo-60.xml powermeter.xml meteo.dtd README
 
-pkgdata_DATA = meteo.xml meteo.dtd
+pkgdata_DATA = meteo.xml meteo.dtd powermeter.xml
 
 
