add solivia stuff

--- a/db/Makefile.am
+++ b/db/Makefile.am
@@ -4,5 +4,5 @@
 # (c) 2001-2021 Prof. Dr. Andreas Mueller
 #
 
-noinst_DATA = meteo.sql powermeter.sql
+noinst_DATA = meteo.sql powermeter.sql solivia.sql
 EXTRA_DIST = $(noinst_DATA) README
