add energy classes for solivia

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -33,6 +33,8 @@ noinst_HEADERS =							\
 	Dewpoint.h							\
 	Dimension.h							\
 	Energy.h							\
+	EnergyConverter.h						\
+	EnergyValue.h							\
 	ExtraTemperatureReader.h					\
 	FQField.h							\
 	FQField_internals.h						\
