--- a/include/config.h.in
+++ b/include/config.h.in
@@ -12,7 +12,7 @@
 /* Define to 1 if you have 'alloca', as a function or macro. */
 #undef HAVE_ALLOCA
 
-/* Define to 1 if you have the <alloca.h> header file. */
+/* Define to 1 if <alloca.h> works. */
 #undef HAVE_ALLOCA_H
 
 /* Define to 1 if you have the <argz.h> header file. */
