add -h option toe meteosunriset

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -124,3 +124,13 @@ testpacket:	meteopacket
 		--server=miranda --config=meteo-test.xml
 	DYLD_BIND_AT_LAUNCH=1 ./meteopacket --debug --station=Gurin \
 		--server=miranda --config=meteo-test.xml --file=packet.csv
+
+#
+# test sunrise/sunset program
+#
+testsunrise:	meteosunriset
+	DYLD_BIND_AT_LAUNCH=1 ./meteosunriset --debug \
+		--longitude=6.9 --latitude=47.06
+	DYLD_BIND_AT_LAUNCH=1 TZ=JST ./meteosunriset --debug \
+		--longitude=140.12 --latitude=35.74
+	
